// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Results Processor should have valid test data to start with 1`] = `
Object {
  "numFailedTestSuites": 1,
  "numFailedTests": 6,
  "numPassedTestSuites": 0,
  "numPassedTests": 0,
  "numPendingTestSuites": 0,
  "numPendingTests": 0,
  "numRuntimeErrorTestSuites": 0,
  "numTodoTests": 0,
  "numTotalTestSuites": 0,
  "numTotalTests": 6,
  "openHandles": Array [],
  "snapshot": Object {
    "added": 0,
    "didUpdate": false,
    "failure": false,
    "filesAdded": 0,
    "filesRemoved": 0,
    "filesRemovedList": Array [],
    "filesUnmatched": 0,
    "filesUpdated": 0,
    "matched": 0,
    "total": 0,
    "unchecked": 0,
    "uncheckedKeysByFile": Array [],
    "unmatched": 0,
    "updated": 0,
  },
  "startTime": 0,
  "success": true,
  "testResults": Array [
    Object {
      "leaks": false,
      "numFailingTests": 6,
      "numPassingTests": 0,
      "numPendingTests": 0,
      "numTodoTests": 0,
      "openHandles": Array [],
      "perfStats": Object {
        "end": 0,
        "runtime": 0,
        "slow": false,
        "start": 0,
      },
      "skipped": false,
      "snapshot": Object {
        "added": 0,
        "fileDeleted": false,
        "matched": 0,
        "unchecked": 0,
        "uncheckedKeys": Array [],
        "unmatched": 0,
        "updated": 0,
      },
      "testFilePath": "/test/data/sa11y-auto-checks.js",
      "testResults": Array [
        Object {
          "ancestorTitles": Array [
            "sa11y",
          ],
          "failureDetails": Array [
            [A11yError: 6 accessibility issues found
 * (bypass) Page must have means to bypass repeated blocks: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/bypass

* (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/document-title

* (html-has-lang) <html> element must have a lang attribute: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/html-has-lang

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/link-name

* (landmark-one-main) Document must have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/landmark-one-main

* (page-has-heading-one) Page must contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/page-has-heading-one],
          ],
          "fullName": "A11yError-0",
          "status": "failed",
        },
        Object {
          "ancestorTitles": Array [
            "sa11y",
          ],
          "failureDetails": Array [
            [A11yError: 1 accessibility issues found
 * (html-has-lang) <html> element must have a lang attribute: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/html-has-lang],
          ],
          "fullName": "A11yError-1",
          "status": "failed",
        },
        Object {
          "ancestorTitles": Array [
            "sa11y",
          ],
          "failureDetails": Array [
            [A11yError: 6 accessibility issues found
 * (bypass) Page must have means to bypass repeated blocks: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/bypass

* (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/document-title

* (html-has-lang) <html> element must have a lang attribute: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/html-has-lang

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/link-name

* (landmark-one-main) Document must have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/landmark-one-main

* (page-has-heading-one) Page must contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/page-has-heading-one],
          ],
          "fullName": "A11yError-2",
          "status": "failed",
        },
        Object {
          "ancestorTitles": Array [
            "sa11y",
          ],
          "failureDetails": Array [
            [A11yError: 1 accessibility issues found
 * (html-has-lang) <html> element must have a lang attribute: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/html-has-lang],
          ],
          "fullName": "A11yError-3",
          "status": "failed",
        },
        Object {
          "ancestorTitles": Array [
            "sa11y",
          ],
          "failureDetails": Array [
            [A11yError: 7 accessibility issues found
 * (bypass) Page must have means to bypass repeated blocks: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/bypass

* (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/document-title

* (html-has-lang) <html> element must have a lang attribute: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/html-has-lang

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/link-name

* (html-has-lang) <html> element must have a lang attribute: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/html-has-lang

* (landmark-one-main) Document must have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/landmark-one-main

* (page-has-heading-one) Page must contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/page-has-heading-one],
          ],
          "fullName": "A11yError-4",
          "status": "failed",
        },
        Object {
          "ancestorTitles": Array [
            "sa11y",
          ],
          "failureDetails": Array [
            [Error: foo],
          ],
          "fullName": "Error-5",
          "status": "failed",
        },
      ],
    },
  ],
  "wasInterrupted": false,
}
`;

exports[`Results Processor should process test results as expected 1`] = `
Object {
  "numFailedTestSuites": 6,
  "numFailedTests": 6,
  "numPassedTestSuites": 0,
  "numPassedTests": 0,
  "numPendingTestSuites": 0,
  "numPendingTests": 0,
  "numRuntimeErrorTestSuites": 0,
  "numTodoTests": 0,
  "numTotalTestSuites": 0,
  "numTotalTests": 12,
  "openHandles": Array [],
  "snapshot": Object {
    "added": 0,
    "didUpdate": false,
    "failure": false,
    "filesAdded": 0,
    "filesRemoved": 0,
    "filesRemovedList": Array [],
    "filesUnmatched": 0,
    "filesUpdated": 0,
    "matched": 0,
    "total": 0,
    "unchecked": 0,
    "uncheckedKeysByFile": Array [],
    "unmatched": 0,
    "updated": 0,
  },
  "startTime": 0,
  "success": true,
  "testResults": Array [
    Object {
      "leaks": false,
      "numFailingTests": 0,
      "numPassingTests": 0,
      "numPendingTests": 0,
      "numTodoTests": 0,
      "openHandles": Array [],
      "perfStats": Object {
        "end": 0,
        "runtime": 0,
        "slow": false,
        "start": 0,
      },
      "skipped": false,
      "snapshot": Object {
        "added": 0,
        "fileDeleted": false,
        "matched": 0,
        "unchecked": 0,
        "uncheckedKeys": Array [],
        "unmatched": 0,
        "updated": 0,
      },
      "testFilePath": "/test/data/sa11y-auto-checks.js",
      "testResults": Array [
        Object {
          "ancestorTitles": Array [
            "sa11y",
          ],
          "failureDetails": Array [
            Object {
              "a11yResults": Array [
                Object {
                  "description": "Page must have means to bypass repeated blocks",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/bypass",
                  "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                  "id": "bypass",
                  "key": "bypass--html",
                  "selectors": "html",
                  "summary": "Fix any of the following:
  No valid skip link found
  Page does not have a heading
  Page does not have a landmark region",
                  "wcag": "WCAG2.0-LevelA-SC2.4.1",
                },
                Object {
                  "description": "Documents must have <title> element to aid in navigation",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/document-title",
                  "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                  "id": "document-title",
                  "key": "document-title--html",
                  "selectors": "html",
                  "summary": "Fix any of the following:
  Document does not have a non-empty <title> element",
                  "wcag": "WCAG2.0-LevelA-SC2.4.2",
                },
                Object {
                  "description": "<html> element must have a lang attribute",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/html-has-lang",
                  "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                  "id": "html-has-lang",
                  "key": "html-has-lang--html",
                  "selectors": "html",
                  "summary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                  "wcag": "WCAG2.0-LevelA-SC3.1.1",
                },
                Object {
                  "description": "Links must have discernible text",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/link-name",
                  "html": "<a href=\\"#\\"></a>",
                  "id": "link-name",
                  "key": "link-name--a",
                  "selectors": "a",
                  "summary": "Fix all of the following:
  Element is in tab order and does not have accessible text

Fix any of the following:
  Element does not have text that is visible to screen readers
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute",
                  "wcag": "WCAG2.0-LevelA-SC4.1.2",
                },
                Object {
                  "description": "Document must have one main landmark",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/landmark-one-main",
                  "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                  "id": "landmark-one-main",
                  "key": "landmark-one-main--html",
                  "selectors": "html",
                  "summary": "Fix all of the following:
  Document does not have a main landmark",
                  "wcag": "best-practice",
                },
                Object {
                  "description": "Page must contain a level-one heading",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/page-has-heading-one",
                  "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                  "id": "page-has-heading-one",
                  "key": "page-has-heading-one--html",
                  "selectors": "html",
                  "summary": "Fix all of the following:
  Page must have a level-one heading",
                  "wcag": "best-practice",
                },
              ],
              "name": "A11yError",
              "violations": Array [
                Object {
                  "description": "Ensures each page has at least one mechanism for a user to bypass navigation and jump straight to the content",
                  "help": "Page must have means to bypass repeated blocks",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/bypass?application=axeAPI",
                  "id": "bypass",
                  "impact": "serious",
                  "nodes": Array [
                    Object {
                      "all": Array [],
                      "any": Array [
                        Object {
                          "data": null,
                          "id": "internal-link-present",
                          "impact": "serious",
                          "message": "No valid skip link found",
                          "relatedNodes": Array [],
                        },
                        Object {
                          "data": null,
                          "id": "header-present",
                          "impact": "serious",
                          "message": "Page does not have a heading",
                          "relatedNodes": Array [],
                        },
                        Object {
                          "data": null,
                          "id": "landmark",
                          "impact": "serious",
                          "message": "Page does not have a landmark region",
                          "relatedNodes": Array [],
                        },
                      ],
                      "failureSummary": "Fix any of the following:
  No valid skip link found
  Page does not have a heading
  Page does not have a landmark region",
                      "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                      "impact": "serious",
                      "none": Array [],
                      "target": Array [
                        "html",
                      ],
                    },
                  ],
                  "tags": Array [
                    "cat.keyboard",
                    "section508",
                    "section508.22.o",
                    "wcag241",
                    "wcag2a",
                  ],
                },
                Object {
                  "description": "Ensures each HTML document contains a non-empty <title> element",
                  "help": "Documents must have <title> element to aid in navigation",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/document-title?application=axeAPI",
                  "id": "document-title",
                  "impact": "serious",
                  "nodes": Array [
                    Object {
                      "all": Array [],
                      "any": Array [
                        Object {
                          "data": null,
                          "id": "doc-has-title",
                          "impact": "serious",
                          "message": "Document does not have a non-empty <title> element",
                          "relatedNodes": Array [],
                        },
                      ],
                      "failureSummary": "Fix any of the following:
  Document does not have a non-empty <title> element",
                      "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                      "impact": "serious",
                      "none": Array [],
                      "target": Array [
                        "html",
                      ],
                    },
                  ],
                  "tags": Array [
                    "ACT",
                    "cat.text-alternatives",
                    "wcag242",
                    "wcag2a",
                  ],
                },
                Object {
                  "description": "Ensures every HTML document has a lang attribute",
                  "help": "<html> element must have a lang attribute",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/html-has-lang?application=axeAPI",
                  "id": "html-has-lang",
                  "impact": "serious",
                  "nodes": Array [
                    Object {
                      "all": Array [],
                      "any": Array [
                        Object {
                          "data": Object {
                            "messageKey": "noLang",
                          },
                          "id": "has-lang",
                          "impact": "serious",
                          "message": "The <html> element does not have a lang attribute",
                          "relatedNodes": Array [],
                        },
                      ],
                      "failureSummary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                      "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                      "impact": "serious",
                      "none": Array [],
                      "target": Array [
                        "html",
                      ],
                    },
                  ],
                  "tags": Array [
                    "ACT",
                    "cat.language",
                    "wcag2a",
                    "wcag311",
                  ],
                },
                Object {
                  "description": "Ensures links have discernible text",
                  "help": "Links must have discernible text",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/link-name?application=axeAPI",
                  "id": "link-name",
                  "impact": "serious",
                  "nodes": Array [
                    Object {
                      "all": Array [],
                      "any": Array [
                        Object {
                          "data": null,
                          "id": "has-visible-text",
                          "impact": "minor",
                          "message": "Element does not have text that is visible to screen readers",
                          "relatedNodes": Array [],
                        },
                        Object {
                          "data": null,
                          "id": "aria-label",
                          "impact": "serious",
                          "message": "aria-label attribute does not exist or is empty",
                          "relatedNodes": Array [],
                        },
                        Object {
                          "data": null,
                          "id": "aria-labelledby",
                          "impact": "serious",
                          "message": "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
                          "relatedNodes": Array [],
                        },
                        Object {
                          "data": Object {
                            "messageKey": "noAttr",
                          },
                          "id": "non-empty-title",
                          "impact": "serious",
                          "message": "Element has no title attribute",
                          "relatedNodes": Array [],
                        },
                      ],
                      "failureSummary": "Fix all of the following:
  Element is in tab order and does not have accessible text

Fix any of the following:
  Element does not have text that is visible to screen readers
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute",
                      "html": "<a href=\\"#\\"></a>",
                      "impact": "serious",
                      "none": Array [
                        Object {
                          "data": null,
                          "id": "focusable-no-name",
                          "impact": "serious",
                          "message": "Element is in tab order and does not have accessible text",
                          "relatedNodes": Array [],
                        },
                      ],
                      "target": Array [
                        "a",
                      ],
                    },
                  ],
                  "tags": Array [
                    "ACT",
                    "cat.name-role-value",
                    "section508",
                    "section508.22.a",
                    "wcag244",
                    "wcag2a",
                    "wcag412",
                  ],
                },
                Object {
                  "description": "Ensures the document has a main landmark",
                  "help": "Document must have one main landmark",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/landmark-one-main?application=axeAPI",
                  "id": "landmark-one-main",
                  "impact": "moderate",
                  "nodes": Array [
                    Object {
                      "all": Array [
                        Object {
                          "data": null,
                          "id": "page-has-main",
                          "impact": "moderate",
                          "message": "Document does not have a main landmark",
                          "relatedNodes": Array [],
                        },
                      ],
                      "any": Array [],
                      "failureSummary": "Fix all of the following:
  Document does not have a main landmark",
                      "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                      "impact": "moderate",
                      "none": Array [],
                      "target": Array [
                        "html",
                      ],
                    },
                  ],
                  "tags": Array [
                    "best-practice",
                    "cat.semantics",
                  ],
                },
                Object {
                  "description": "Ensure that the page, or at least one of its frames contains a level-one heading",
                  "help": "Page must contain a level-one heading",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/page-has-heading-one?application=axeAPI",
                  "id": "page-has-heading-one",
                  "impact": "moderate",
                  "nodes": Array [
                    Object {
                      "all": Array [
                        Object {
                          "data": null,
                          "id": "page-has-heading-one",
                          "impact": "moderate",
                          "message": "Page must have a level-one heading",
                          "relatedNodes": Array [],
                        },
                      ],
                      "any": Array [],
                      "failureSummary": "Fix all of the following:
  Page must have a level-one heading",
                      "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                      "impact": "moderate",
                      "none": Array [],
                      "target": Array [
                        "html",
                      ],
                    },
                  ],
                  "tags": Array [
                    "best-practice",
                    "cat.semantics",
                  ],
                },
              ],
            },
          ],
          "fullName": "A11yError-0",
          "status": "disabled",
        },
        Object {
          "ancestorTitles": Array [
            "sa11y",
          ],
          "failureDetails": Array [
            Object {
              "a11yResults": Array [
                Object {
                  "description": "<html> element must have a lang attribute",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/html-has-lang",
                  "html": "<html>",
                  "id": "html-has-lang",
                  "key": "html-has-lang--html",
                  "selectors": "html",
                  "summary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                  "wcag": "WCAG2.0-LevelA-SC3.1.1",
                },
              ],
              "name": "A11yError",
              "violations": Array [
                Object {
                  "description": "Ensures every HTML document has a lang attribute",
                  "help": "<html> element must have a lang attribute",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/html-has-lang?application=axeAPI",
                  "id": "html-has-lang",
                  "impact": "serious",
                  "nodes": Array [
                    Object {
                      "all": Array [],
                      "any": Array [
                        Object {
                          "data": Object {
                            "messageKey": "noLang",
                          },
                          "id": "has-lang",
                          "impact": "serious",
                          "message": "The <html> element does not have a lang attribute",
                          "relatedNodes": Array [],
                        },
                      ],
                      "failureSummary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                      "html": "<html>",
                      "impact": "serious",
                      "none": Array [],
                      "target": Array [
                        "html",
                      ],
                    },
                  ],
                  "tags": Array [
                    "ACT",
                    "cat.language",
                    "wcag2a",
                    "wcag311",
                  ],
                },
              ],
            },
          ],
          "fullName": "A11yError-1",
          "status": "disabled",
        },
        Object {
          "ancestorTitles": Array [
            "sa11y",
          ],
          "failureDetails": Array [
            Object {
              "a11yResults": Array [
                Object {
                  "description": "Page must have means to bypass repeated blocks",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/bypass",
                  "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                  "id": "bypass",
                  "key": "bypass--html",
                  "selectors": "html",
                  "summary": "Fix any of the following:
  No valid skip link found
  Page does not have a heading
  Page does not have a landmark region",
                  "wcag": "WCAG2.0-LevelA-SC2.4.1",
                },
                Object {
                  "description": "Documents must have <title> element to aid in navigation",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/document-title",
                  "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                  "id": "document-title",
                  "key": "document-title--html",
                  "selectors": "html",
                  "summary": "Fix any of the following:
  Document does not have a non-empty <title> element",
                  "wcag": "WCAG2.0-LevelA-SC2.4.2",
                },
                Object {
                  "description": "<html> element must have a lang attribute",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/html-has-lang",
                  "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                  "id": "html-has-lang",
                  "key": "html-has-lang--html",
                  "selectors": "html",
                  "summary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                  "wcag": "WCAG2.0-LevelA-SC3.1.1",
                },
                Object {
                  "description": "Links must have discernible text",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/link-name",
                  "html": "<a href=\\"#\\"></a>",
                  "id": "link-name",
                  "key": "link-name--a",
                  "selectors": "a",
                  "summary": "Fix all of the following:
  Element is in tab order and does not have accessible text

Fix any of the following:
  Element does not have text that is visible to screen readers
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute",
                  "wcag": "WCAG2.0-LevelA-SC4.1.2",
                },
                Object {
                  "description": "Document must have one main landmark",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/landmark-one-main",
                  "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                  "id": "landmark-one-main",
                  "key": "landmark-one-main--html",
                  "selectors": "html",
                  "summary": "Fix all of the following:
  Document does not have a main landmark",
                  "wcag": "best-practice",
                },
                Object {
                  "description": "Page must contain a level-one heading",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/page-has-heading-one",
                  "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                  "id": "page-has-heading-one",
                  "key": "page-has-heading-one--html",
                  "selectors": "html",
                  "summary": "Fix all of the following:
  Page must have a level-one heading",
                  "wcag": "best-practice",
                },
              ],
              "name": "A11yError",
              "violations": Array [
                Object {
                  "description": "Ensures each page has at least one mechanism for a user to bypass navigation and jump straight to the content",
                  "help": "Page must have means to bypass repeated blocks",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/bypass?application=axeAPI",
                  "id": "bypass",
                  "impact": "serious",
                  "nodes": Array [
                    Object {
                      "all": Array [],
                      "any": Array [
                        Object {
                          "data": null,
                          "id": "internal-link-present",
                          "impact": "serious",
                          "message": "No valid skip link found",
                          "relatedNodes": Array [],
                        },
                        Object {
                          "data": null,
                          "id": "header-present",
                          "impact": "serious",
                          "message": "Page does not have a heading",
                          "relatedNodes": Array [],
                        },
                        Object {
                          "data": null,
                          "id": "landmark",
                          "impact": "serious",
                          "message": "Page does not have a landmark region",
                          "relatedNodes": Array [],
                        },
                      ],
                      "failureSummary": "Fix any of the following:
  No valid skip link found
  Page does not have a heading
  Page does not have a landmark region",
                      "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                      "impact": "serious",
                      "none": Array [],
                      "target": Array [
                        "html",
                      ],
                    },
                  ],
                  "tags": Array [
                    "cat.keyboard",
                    "section508",
                    "section508.22.o",
                    "wcag241",
                    "wcag2a",
                  ],
                },
                Object {
                  "description": "Ensures each HTML document contains a non-empty <title> element",
                  "help": "Documents must have <title> element to aid in navigation",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/document-title?application=axeAPI",
                  "id": "document-title",
                  "impact": "serious",
                  "nodes": Array [
                    Object {
                      "all": Array [],
                      "any": Array [
                        Object {
                          "data": null,
                          "id": "doc-has-title",
                          "impact": "serious",
                          "message": "Document does not have a non-empty <title> element",
                          "relatedNodes": Array [],
                        },
                      ],
                      "failureSummary": "Fix any of the following:
  Document does not have a non-empty <title> element",
                      "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                      "impact": "serious",
                      "none": Array [],
                      "target": Array [
                        "html",
                      ],
                    },
                  ],
                  "tags": Array [
                    "ACT",
                    "cat.text-alternatives",
                    "wcag242",
                    "wcag2a",
                  ],
                },
                Object {
                  "description": "Ensures every HTML document has a lang attribute",
                  "help": "<html> element must have a lang attribute",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/html-has-lang?application=axeAPI",
                  "id": "html-has-lang",
                  "impact": "serious",
                  "nodes": Array [
                    Object {
                      "all": Array [],
                      "any": Array [
                        Object {
                          "data": Object {
                            "messageKey": "noLang",
                          },
                          "id": "has-lang",
                          "impact": "serious",
                          "message": "The <html> element does not have a lang attribute",
                          "relatedNodes": Array [],
                        },
                      ],
                      "failureSummary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                      "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                      "impact": "serious",
                      "none": Array [],
                      "target": Array [
                        "html",
                      ],
                    },
                  ],
                  "tags": Array [
                    "ACT",
                    "cat.language",
                    "wcag2a",
                    "wcag311",
                  ],
                },
                Object {
                  "description": "Ensures links have discernible text",
                  "help": "Links must have discernible text",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/link-name?application=axeAPI",
                  "id": "link-name",
                  "impact": "serious",
                  "nodes": Array [
                    Object {
                      "all": Array [],
                      "any": Array [
                        Object {
                          "data": null,
                          "id": "has-visible-text",
                          "impact": "minor",
                          "message": "Element does not have text that is visible to screen readers",
                          "relatedNodes": Array [],
                        },
                        Object {
                          "data": null,
                          "id": "aria-label",
                          "impact": "serious",
                          "message": "aria-label attribute does not exist or is empty",
                          "relatedNodes": Array [],
                        },
                        Object {
                          "data": null,
                          "id": "aria-labelledby",
                          "impact": "serious",
                          "message": "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
                          "relatedNodes": Array [],
                        },
                        Object {
                          "data": Object {
                            "messageKey": "noAttr",
                          },
                          "id": "non-empty-title",
                          "impact": "serious",
                          "message": "Element has no title attribute",
                          "relatedNodes": Array [],
                        },
                      ],
                      "failureSummary": "Fix all of the following:
  Element is in tab order and does not have accessible text

Fix any of the following:
  Element does not have text that is visible to screen readers
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute",
                      "html": "<a href=\\"#\\"></a>",
                      "impact": "serious",
                      "none": Array [
                        Object {
                          "data": null,
                          "id": "focusable-no-name",
                          "impact": "serious",
                          "message": "Element is in tab order and does not have accessible text",
                          "relatedNodes": Array [],
                        },
                      ],
                      "target": Array [
                        "a",
                      ],
                    },
                  ],
                  "tags": Array [
                    "ACT",
                    "cat.name-role-value",
                    "section508",
                    "section508.22.a",
                    "wcag244",
                    "wcag2a",
                    "wcag412",
                  ],
                },
                Object {
                  "description": "Ensures the document has a main landmark",
                  "help": "Document must have one main landmark",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/landmark-one-main?application=axeAPI",
                  "id": "landmark-one-main",
                  "impact": "moderate",
                  "nodes": Array [
                    Object {
                      "all": Array [
                        Object {
                          "data": null,
                          "id": "page-has-main",
                          "impact": "moderate",
                          "message": "Document does not have a main landmark",
                          "relatedNodes": Array [],
                        },
                      ],
                      "any": Array [],
                      "failureSummary": "Fix all of the following:
  Document does not have a main landmark",
                      "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                      "impact": "moderate",
                      "none": Array [],
                      "target": Array [
                        "html",
                      ],
                    },
                  ],
                  "tags": Array [
                    "best-practice",
                    "cat.semantics",
                  ],
                },
                Object {
                  "description": "Ensure that the page, or at least one of its frames contains a level-one heading",
                  "help": "Page must contain a level-one heading",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/page-has-heading-one?application=axeAPI",
                  "id": "page-has-heading-one",
                  "impact": "moderate",
                  "nodes": Array [
                    Object {
                      "all": Array [
                        Object {
                          "data": null,
                          "id": "page-has-heading-one",
                          "impact": "moderate",
                          "message": "Page must have a level-one heading",
                          "relatedNodes": Array [],
                        },
                      ],
                      "any": Array [],
                      "failureSummary": "Fix all of the following:
  Page must have a level-one heading",
                      "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                      "impact": "moderate",
                      "none": Array [],
                      "target": Array [
                        "html",
                      ],
                    },
                  ],
                  "tags": Array [
                    "best-practice",
                    "cat.semantics",
                  ],
                },
              ],
            },
          ],
          "fullName": "A11yError-2",
          "status": "disabled",
        },
        Object {
          "ancestorTitles": Array [
            "sa11y",
          ],
          "failureDetails": Array [
            Object {
              "a11yResults": Array [
                Object {
                  "description": "<html> element must have a lang attribute",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/html-has-lang",
                  "html": "<html>",
                  "id": "html-has-lang",
                  "key": "html-has-lang--html",
                  "selectors": "html",
                  "summary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                  "wcag": "WCAG2.0-LevelA-SC3.1.1",
                },
              ],
              "name": "A11yError",
              "violations": Array [
                Object {
                  "description": "Ensures every HTML document has a lang attribute",
                  "help": "<html> element must have a lang attribute",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/html-has-lang?application=axeAPI",
                  "id": "html-has-lang",
                  "impact": "serious",
                  "nodes": Array [
                    Object {
                      "all": Array [],
                      "any": Array [
                        Object {
                          "data": Object {
                            "messageKey": "noLang",
                          },
                          "id": "has-lang",
                          "impact": "serious",
                          "message": "The <html> element does not have a lang attribute",
                          "relatedNodes": Array [],
                        },
                      ],
                      "failureSummary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                      "html": "<html>",
                      "impact": "serious",
                      "none": Array [],
                      "target": Array [
                        "html",
                      ],
                    },
                  ],
                  "tags": Array [
                    "ACT",
                    "cat.language",
                    "wcag2a",
                    "wcag311",
                  ],
                },
              ],
            },
          ],
          "fullName": "A11yError-3",
          "status": "disabled",
        },
        Object {
          "ancestorTitles": Array [
            "sa11y",
          ],
          "failureDetails": Array [
            Object {
              "a11yResults": Array [
                Object {
                  "description": "Page must have means to bypass repeated blocks",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/bypass",
                  "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                  "id": "bypass",
                  "key": "bypass--html",
                  "selectors": "html",
                  "summary": "Fix any of the following:
  No valid skip link found
  Page does not have a heading
  Page does not have a landmark region",
                  "wcag": "WCAG2.0-LevelA-SC2.4.1",
                },
                Object {
                  "description": "Documents must have <title> element to aid in navigation",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/document-title",
                  "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                  "id": "document-title",
                  "key": "document-title--html",
                  "selectors": "html",
                  "summary": "Fix any of the following:
  Document does not have a non-empty <title> element",
                  "wcag": "WCAG2.0-LevelA-SC2.4.2",
                },
                Object {
                  "description": "<html> element must have a lang attribute",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/html-has-lang",
                  "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                  "id": "html-has-lang",
                  "key": "html-has-lang--html",
                  "selectors": "html",
                  "summary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                  "wcag": "WCAG2.0-LevelA-SC3.1.1",
                },
                Object {
                  "description": "Links must have discernible text",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/link-name",
                  "html": "<a href=\\"#\\"></a>",
                  "id": "link-name",
                  "key": "link-name--a",
                  "selectors": "a",
                  "summary": "Fix all of the following:
  Element is in tab order and does not have accessible text

Fix any of the following:
  Element does not have text that is visible to screen readers
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute",
                  "wcag": "WCAG2.0-LevelA-SC4.1.2",
                },
                Object {
                  "description": "<html> element must have a lang attribute",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/html-has-lang",
                  "html": "<html>",
                  "id": "html-has-lang",
                  "key": "html-has-lang--html",
                  "selectors": "html",
                  "summary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                  "wcag": "WCAG2.0-LevelA-SC3.1.1",
                },
                Object {
                  "description": "Document must have one main landmark",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/landmark-one-main",
                  "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                  "id": "landmark-one-main",
                  "key": "landmark-one-main--html",
                  "selectors": "html",
                  "summary": "Fix all of the following:
  Document does not have a main landmark",
                  "wcag": "best-practice",
                },
                Object {
                  "description": "Page must contain a level-one heading",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/page-has-heading-one",
                  "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                  "id": "page-has-heading-one",
                  "key": "page-has-heading-one--html",
                  "selectors": "html",
                  "summary": "Fix all of the following:
  Page must have a level-one heading",
                  "wcag": "best-practice",
                },
              ],
              "name": "A11yError",
              "violations": Array [
                Object {
                  "description": "Ensures each page has at least one mechanism for a user to bypass navigation and jump straight to the content",
                  "help": "Page must have means to bypass repeated blocks",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/bypass?application=axeAPI",
                  "id": "bypass",
                  "impact": "serious",
                  "nodes": Array [
                    Object {
                      "all": Array [],
                      "any": Array [
                        Object {
                          "data": null,
                          "id": "internal-link-present",
                          "impact": "serious",
                          "message": "No valid skip link found",
                          "relatedNodes": Array [],
                        },
                        Object {
                          "data": null,
                          "id": "header-present",
                          "impact": "serious",
                          "message": "Page does not have a heading",
                          "relatedNodes": Array [],
                        },
                        Object {
                          "data": null,
                          "id": "landmark",
                          "impact": "serious",
                          "message": "Page does not have a landmark region",
                          "relatedNodes": Array [],
                        },
                      ],
                      "failureSummary": "Fix any of the following:
  No valid skip link found
  Page does not have a heading
  Page does not have a landmark region",
                      "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                      "impact": "serious",
                      "none": Array [],
                      "target": Array [
                        "html",
                      ],
                    },
                  ],
                  "tags": Array [
                    "cat.keyboard",
                    "section508",
                    "section508.22.o",
                    "wcag241",
                    "wcag2a",
                  ],
                },
                Object {
                  "description": "Ensures each HTML document contains a non-empty <title> element",
                  "help": "Documents must have <title> element to aid in navigation",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/document-title?application=axeAPI",
                  "id": "document-title",
                  "impact": "serious",
                  "nodes": Array [
                    Object {
                      "all": Array [],
                      "any": Array [
                        Object {
                          "data": null,
                          "id": "doc-has-title",
                          "impact": "serious",
                          "message": "Document does not have a non-empty <title> element",
                          "relatedNodes": Array [],
                        },
                      ],
                      "failureSummary": "Fix any of the following:
  Document does not have a non-empty <title> element",
                      "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                      "impact": "serious",
                      "none": Array [],
                      "target": Array [
                        "html",
                      ],
                    },
                  ],
                  "tags": Array [
                    "ACT",
                    "cat.text-alternatives",
                    "wcag242",
                    "wcag2a",
                  ],
                },
                Object {
                  "description": "Ensures every HTML document has a lang attribute",
                  "help": "<html> element must have a lang attribute",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/html-has-lang?application=axeAPI",
                  "id": "html-has-lang",
                  "impact": "serious",
                  "nodes": Array [
                    Object {
                      "all": Array [],
                      "any": Array [
                        Object {
                          "data": Object {
                            "messageKey": "noLang",
                          },
                          "id": "has-lang",
                          "impact": "serious",
                          "message": "The <html> element does not have a lang attribute",
                          "relatedNodes": Array [],
                        },
                      ],
                      "failureSummary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                      "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                      "impact": "serious",
                      "none": Array [],
                      "target": Array [
                        "html",
                      ],
                    },
                  ],
                  "tags": Array [
                    "ACT",
                    "cat.language",
                    "wcag2a",
                    "wcag311",
                  ],
                },
                Object {
                  "description": "Ensures links have discernible text",
                  "help": "Links must have discernible text",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/link-name?application=axeAPI",
                  "id": "link-name",
                  "impact": "serious",
                  "nodes": Array [
                    Object {
                      "all": Array [],
                      "any": Array [
                        Object {
                          "data": null,
                          "id": "has-visible-text",
                          "impact": "minor",
                          "message": "Element does not have text that is visible to screen readers",
                          "relatedNodes": Array [],
                        },
                        Object {
                          "data": null,
                          "id": "aria-label",
                          "impact": "serious",
                          "message": "aria-label attribute does not exist or is empty",
                          "relatedNodes": Array [],
                        },
                        Object {
                          "data": null,
                          "id": "aria-labelledby",
                          "impact": "serious",
                          "message": "aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty",
                          "relatedNodes": Array [],
                        },
                        Object {
                          "data": Object {
                            "messageKey": "noAttr",
                          },
                          "id": "non-empty-title",
                          "impact": "serious",
                          "message": "Element has no title attribute",
                          "relatedNodes": Array [],
                        },
                      ],
                      "failureSummary": "Fix all of the following:
  Element is in tab order and does not have accessible text

Fix any of the following:
  Element does not have text that is visible to screen readers
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute",
                      "html": "<a href=\\"#\\"></a>",
                      "impact": "serious",
                      "none": Array [
                        Object {
                          "data": null,
                          "id": "focusable-no-name",
                          "impact": "serious",
                          "message": "Element is in tab order and does not have accessible text",
                          "relatedNodes": Array [],
                        },
                      ],
                      "target": Array [
                        "a",
                      ],
                    },
                  ],
                  "tags": Array [
                    "ACT",
                    "cat.name-role-value",
                    "section508",
                    "section508.22.a",
                    "wcag244",
                    "wcag2a",
                    "wcag412",
                  ],
                },
                Object {
                  "description": "Ensures every HTML document has a lang attribute",
                  "help": "<html> element must have a lang attribute",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/html-has-lang?application=axeAPI",
                  "id": "html-has-lang",
                  "impact": "serious",
                  "nodes": Array [
                    Object {
                      "all": Array [],
                      "any": Array [
                        Object {
                          "data": Object {
                            "messageKey": "noLang",
                          },
                          "id": "has-lang",
                          "impact": "serious",
                          "message": "The <html> element does not have a lang attribute",
                          "relatedNodes": Array [],
                        },
                      ],
                      "failureSummary": "Fix any of the following:
  The <html> element does not have a lang attribute",
                      "html": "<html>",
                      "impact": "serious",
                      "none": Array [],
                      "target": Array [
                        "html",
                      ],
                    },
                  ],
                  "tags": Array [
                    "ACT",
                    "cat.language",
                    "wcag2a",
                    "wcag311",
                  ],
                },
                Object {
                  "description": "Ensures the document has a main landmark",
                  "help": "Document must have one main landmark",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/landmark-one-main?application=axeAPI",
                  "id": "landmark-one-main",
                  "impact": "moderate",
                  "nodes": Array [
                    Object {
                      "all": Array [
                        Object {
                          "data": null,
                          "id": "page-has-main",
                          "impact": "moderate",
                          "message": "Document does not have a main landmark",
                          "relatedNodes": Array [],
                        },
                      ],
                      "any": Array [],
                      "failureSummary": "Fix all of the following:
  Document does not have a main landmark",
                      "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                      "impact": "moderate",
                      "none": Array [],
                      "target": Array [
                        "html",
                      ],
                    },
                  ],
                  "tags": Array [
                    "best-practice",
                    "cat.semantics",
                  ],
                },
                Object {
                  "description": "Ensure that the page, or at least one of its frames contains a level-one heading",
                  "help": "Page must contain a level-one heading",
                  "helpUrl": "https://dequeuniversity.com/rules/axe/4.1/page-has-heading-one?application=axeAPI",
                  "id": "page-has-heading-one",
                  "impact": "moderate",
                  "nodes": Array [
                    Object {
                      "all": Array [
                        Object {
                          "data": null,
                          "id": "page-has-heading-one",
                          "impact": "moderate",
                          "message": "Page must have a level-one heading",
                          "relatedNodes": Array [],
                        },
                      ],
                      "any": Array [],
                      "failureSummary": "Fix all of the following:
  Page must have a level-one heading",
                      "html": "<html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>",
                      "impact": "moderate",
                      "none": Array [],
                      "target": Array [
                        "html",
                      ],
                    },
                  ],
                  "tags": Array [
                    "best-practice",
                    "cat.semantics",
                  ],
                },
              ],
            },
          ],
          "fullName": "A11yError-4",
          "status": "disabled",
        },
        Object {
          "ancestorTitles": Array [
            "sa11y",
          ],
          "failureDetails": Array [
            Object {},
          ],
          "fullName": "Error-5",
          "status": "disabled",
        },
      ],
    },
    Object {
      "leaks": false,
      "numFailingTests": 1,
      "numPassingTests": 0,
      "numPendingTests": 0,
      "numTodoTests": 0,
      "openHandles": Array [],
      "perfStats": Object {
        "end": 0,
        "runtime": 0,
        "slow": false,
        "start": 0,
      },
      "skipped": false,
      "snapshot": Object {
        "added": 0,
        "fileDeleted": false,
        "matched": 0,
        "unchecked": 0,
        "uncheckedKeys": Array [],
        "unmatched": 0,
        "updated": 0,
      },
      "testFilePath": "[Sa11y WCAG2.0-LevelA-SC2.4.1 bypass sa11y-auto-checks.js]",
      "testResults": Array [
        Object {
          "ancestorTitles": Array [
            "sa11y",
            "A11yError-0",
          ],
          "failureDetails": Array [],
          "failureMessages": Array [
            "accessibility issues found: Page must have means to bypass repeated blocks
CSS Selectors: html
HTML element: <html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>
Help: https://dequeuniversity.com/rules/axe/4.1/bypass
Tests: \\"A11yError-0\\"
Summary: Fix any of the following:
  No valid skip link found
  Page does not have a heading
  Page does not have a landmark region",
          ],
          "fullName": "Page must have means to bypass repeated blocks: html",
          "status": "failed",
        },
      ],
    },
    Object {
      "leaks": false,
      "numFailingTests": 1,
      "numPassingTests": 0,
      "numPendingTests": 0,
      "numTodoTests": 0,
      "openHandles": Array [],
      "perfStats": Object {
        "end": 0,
        "runtime": 0,
        "slow": false,
        "start": 0,
      },
      "skipped": false,
      "snapshot": Object {
        "added": 0,
        "fileDeleted": false,
        "matched": 0,
        "unchecked": 0,
        "uncheckedKeys": Array [],
        "unmatched": 0,
        "updated": 0,
      },
      "testFilePath": "[Sa11y WCAG2.0-LevelA-SC2.4.2 document-title sa11y-auto-checks.js]",
      "testResults": Array [
        Object {
          "ancestorTitles": Array [
            "sa11y",
            "A11yError-0",
          ],
          "failureDetails": Array [],
          "failureMessages": Array [
            "accessibility issues found: Documents must have <title> element to aid in navigation
CSS Selectors: html
HTML element: <html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>
Help: https://dequeuniversity.com/rules/axe/4.1/document-title
Tests: \\"A11yError-0\\"
Summary: Fix any of the following:
  Document does not have a non-empty <title> element",
          ],
          "fullName": "Documents must have <title> element to aid in navigation: html",
          "status": "failed",
        },
      ],
    },
    Object {
      "leaks": false,
      "numFailingTests": 1,
      "numPassingTests": 0,
      "numPendingTests": 0,
      "numTodoTests": 0,
      "openHandles": Array [],
      "perfStats": Object {
        "end": 0,
        "runtime": 0,
        "slow": false,
        "start": 0,
      },
      "skipped": false,
      "snapshot": Object {
        "added": 0,
        "fileDeleted": false,
        "matched": 0,
        "unchecked": 0,
        "uncheckedKeys": Array [],
        "unmatched": 0,
        "updated": 0,
      },
      "testFilePath": "[Sa11y WCAG2.0-LevelA-SC3.1.1 html-has-lang sa11y-auto-checks.js]",
      "testResults": Array [
        Object {
          "ancestorTitles": Array [
            "sa11y",
            "A11yError-0",
          ],
          "failureDetails": Array [],
          "failureMessages": Array [
            "accessibility issues found: <html> element must have a lang attribute
CSS Selectors: html
HTML element: <html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>
Help: https://dequeuniversity.com/rules/axe/4.1/html-has-lang
Tests: \\"A11yError-0\\"
Summary: Fix any of the following:
  The <html> element does not have a lang attribute",
          ],
          "fullName": "<html> element must have a lang attribute: html",
          "status": "failed",
        },
      ],
    },
    Object {
      "leaks": false,
      "numFailingTests": 1,
      "numPassingTests": 0,
      "numPendingTests": 0,
      "numTodoTests": 0,
      "openHandles": Array [],
      "perfStats": Object {
        "end": 0,
        "runtime": 0,
        "slow": false,
        "start": 0,
      },
      "skipped": false,
      "snapshot": Object {
        "added": 0,
        "fileDeleted": false,
        "matched": 0,
        "unchecked": 0,
        "uncheckedKeys": Array [],
        "unmatched": 0,
        "updated": 0,
      },
      "testFilePath": "[Sa11y WCAG2.0-LevelA-SC4.1.2 link-name sa11y-auto-checks.js]",
      "testResults": Array [
        Object {
          "ancestorTitles": Array [
            "sa11y",
            "A11yError-0",
          ],
          "failureDetails": Array [],
          "failureMessages": Array [
            "accessibility issues found: Links must have discernible text
CSS Selectors: a
HTML element: <a href=\\"#\\"></a>
Help: https://dequeuniversity.com/rules/axe/4.1/link-name
Tests: \\"A11yError-0\\"
Summary: Fix all of the following:
  Element is in tab order and does not have accessible text

Fix any of the following:
  Element does not have text that is visible to screen readers
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute",
          ],
          "fullName": "Links must have discernible text: a",
          "status": "failed",
        },
      ],
    },
    Object {
      "leaks": false,
      "numFailingTests": 1,
      "numPassingTests": 0,
      "numPendingTests": 0,
      "numTodoTests": 0,
      "openHandles": Array [],
      "perfStats": Object {
        "end": 0,
        "runtime": 0,
        "slow": false,
        "start": 0,
      },
      "skipped": false,
      "snapshot": Object {
        "added": 0,
        "fileDeleted": false,
        "matched": 0,
        "unchecked": 0,
        "uncheckedKeys": Array [],
        "unmatched": 0,
        "updated": 0,
      },
      "testFilePath": "[Sa11y best-practice landmark-one-main sa11y-auto-checks.js]",
      "testResults": Array [
        Object {
          "ancestorTitles": Array [
            "sa11y",
            "A11yError-0",
          ],
          "failureDetails": Array [],
          "failureMessages": Array [
            "accessibility issues found: Document must have one main landmark
CSS Selectors: html
HTML element: <html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>
Help: https://dequeuniversity.com/rules/axe/4.1/landmark-one-main
Tests: \\"A11yError-0\\"
Summary: Fix all of the following:
  Document does not have a main landmark",
          ],
          "fullName": "Document must have one main landmark: html",
          "status": "failed",
        },
      ],
    },
    Object {
      "leaks": false,
      "numFailingTests": 1,
      "numPassingTests": 0,
      "numPendingTests": 0,
      "numTodoTests": 0,
      "openHandles": Array [],
      "perfStats": Object {
        "end": 0,
        "runtime": 0,
        "slow": false,
        "start": 0,
      },
      "skipped": false,
      "snapshot": Object {
        "added": 0,
        "fileDeleted": false,
        "matched": 0,
        "unchecked": 0,
        "uncheckedKeys": Array [],
        "unmatched": 0,
        "updated": 0,
      },
      "testFilePath": "[Sa11y best-practice page-has-heading-one sa11y-auto-checks.js]",
      "testResults": Array [
        Object {
          "ancestorTitles": Array [
            "sa11y",
            "A11yError-0",
          ],
          "failureDetails": Array [],
          "failureMessages": Array [
            "accessibility issues found: Page must contain a level-one heading
CSS Selectors: html
HTML element: <html><head></head><body>

<div id=\\"dom-with-issues\\">
    <a href=\\"#\\"></a>
</div>


</body></html>
Help: https://dequeuniversity.com/rules/axe/4.1/page-has-heading-one
Tests: \\"A11yError-0\\"
Summary: Fix all of the following:
  Page must have a level-one heading",
          ],
          "fullName": "Page must contain a level-one heading: html",
          "status": "failed",
        },
      ],
    },
  ],
  "wasInterrupted": false,
}
`;

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 0 1`] = `
"* (bypass) Page must have means to bypass repeated blocks: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/bypass

* (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/document-title

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/link-name

* (landmark-one-main) Document must have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/landmark-one-main

* (page-has-heading-one) Page must contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/page-has-heading-one"
`;

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 0 2`] = `5`;

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 0 3`] = `
"5 accessibility issues found
 * (bypass) Page must have means to bypass repeated blocks: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/bypass

* (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/document-title

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/link-name

* (landmark-one-main) Document must have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/landmark-one-main

* (page-has-heading-one) Page must contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/page-has-heading-one"
`;

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 1 1`] = `""`;

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 1 2`] = `0`;

exports[`a11y Results Formatter should format a11y issues as expected with default options for dom 1 3`] = `
"0 accessibility issues found
 "
`;

exports[`a11y Results Formatter should format using specified options: 0 1`] = `"[{\\"id\\":\\"bypass\\",\\"impact\\":\\"serious\\",\\"tags\\":[\\"cat.keyboard\\",\\"section508\\",\\"section508.22.o\\",\\"wcag241\\",\\"wcag2a\\"],\\"description\\":\\"Ensures each page has at least one mechanism for a user to bypass navigation and jump straight to the content\\",\\"help\\":\\"Page must have means to bypass repeated blocks\\",\\"helpUrl\\":\\"https://dequeuniversity.com/rules/axe/4.1/bypass?application=axeAPI\\",\\"nodes\\":[{\\"any\\":[{\\"id\\":\\"internal-link-present\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"No valid skip link found\\"},{\\"id\\":\\"header-present\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"Page does not have a heading\\"},{\\"id\\":\\"landmark\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"Page does not have a landmark region\\"}],\\"all\\":[],\\"none\\":[],\\"impact\\":\\"serious\\",\\"html\\":\\"<html lang=\\\\\\"en\\\\\\"><head></head><body>\\\\n\\\\n<div id=\\\\\\"dom-with-issues\\\\\\">\\\\n    <a href=\\\\\\"#\\\\\\"></a>\\\\n</div>\\\\n\\\\n\\\\n</body></html>\\",\\"target\\":[\\"html\\"],\\"failureSummary\\":\\"Fix any of the following:\\\\n  No valid skip link found\\\\n  Page does not have a heading\\\\n  Page does not have a landmark region\\"}]},{\\"id\\":\\"document-title\\",\\"impact\\":\\"serious\\",\\"tags\\":[\\"ACT\\",\\"cat.text-alternatives\\",\\"wcag242\\",\\"wcag2a\\"],\\"description\\":\\"Ensures each HTML document contains a non-empty <title> element\\",\\"help\\":\\"Documents must have <title> element to aid in navigation\\",\\"helpUrl\\":\\"https://dequeuniversity.com/rules/axe/4.1/document-title?application=axeAPI\\",\\"nodes\\":[{\\"any\\":[{\\"id\\":\\"doc-has-title\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"Document does not have a non-empty <title> element\\"}],\\"all\\":[],\\"none\\":[],\\"impact\\":\\"serious\\",\\"html\\":\\"<html lang=\\\\\\"en\\\\\\"><head></head><body>\\\\n\\\\n<div id=\\\\\\"dom-with-issues\\\\\\">\\\\n    <a href=\\\\\\"#\\\\\\"></a>\\\\n</div>\\\\n\\\\n\\\\n</body></html>\\",\\"target\\":[\\"html\\"],\\"failureSummary\\":\\"Fix any of the following:\\\\n  Document does not have a non-empty <title> element\\"}]},{\\"id\\":\\"link-name\\",\\"impact\\":\\"serious\\",\\"tags\\":[\\"ACT\\",\\"cat.name-role-value\\",\\"section508\\",\\"section508.22.a\\",\\"wcag244\\",\\"wcag2a\\",\\"wcag412\\"],\\"description\\":\\"Ensures links have discernible text\\",\\"help\\":\\"Links must have discernible text\\",\\"helpUrl\\":\\"https://dequeuniversity.com/rules/axe/4.1/link-name?application=axeAPI\\",\\"nodes\\":[{\\"any\\":[{\\"id\\":\\"has-visible-text\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"minor\\",\\"message\\":\\"Element does not have text that is visible to screen readers\\"},{\\"id\\":\\"aria-label\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"aria-label attribute does not exist or is empty\\"},{\\"id\\":\\"aria-labelledby\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty\\"},{\\"id\\":\\"non-empty-title\\",\\"data\\":{\\"messageKey\\":\\"noAttr\\"},\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"Element has no title attribute\\"}],\\"all\\":[],\\"none\\":[{\\"id\\":\\"focusable-no-name\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"serious\\",\\"message\\":\\"Element is in tab order and does not have accessible text\\"}],\\"impact\\":\\"serious\\",\\"html\\":\\"<a href=\\\\\\"#\\\\\\"></a>\\",\\"target\\":[\\"a\\"],\\"failureSummary\\":\\"Fix all of the following:\\\\n  Element is in tab order and does not have accessible text\\\\n\\\\nFix any of the following:\\\\n  Element does not have text that is visible to screen readers\\\\n  aria-label attribute does not exist or is empty\\\\n  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty\\\\n  Element has no title attribute\\"}]},{\\"id\\":\\"landmark-one-main\\",\\"impact\\":\\"moderate\\",\\"tags\\":[\\"best-practice\\",\\"cat.semantics\\"],\\"description\\":\\"Ensures the document has a main landmark\\",\\"help\\":\\"Document must have one main landmark\\",\\"helpUrl\\":\\"https://dequeuniversity.com/rules/axe/4.1/landmark-one-main?application=axeAPI\\",\\"nodes\\":[{\\"any\\":[],\\"all\\":[{\\"id\\":\\"page-has-main\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"moderate\\",\\"message\\":\\"Document does not have a main landmark\\"}],\\"none\\":[],\\"impact\\":\\"moderate\\",\\"html\\":\\"<html lang=\\\\\\"en\\\\\\"><head></head><body>\\\\n\\\\n<div id=\\\\\\"dom-with-issues\\\\\\">\\\\n    <a href=\\\\\\"#\\\\\\"></a>\\\\n</div>\\\\n\\\\n\\\\n</body></html>\\",\\"target\\":[\\"html\\"],\\"failureSummary\\":\\"Fix all of the following:\\\\n  Document does not have a main landmark\\"}]},{\\"id\\":\\"page-has-heading-one\\",\\"impact\\":\\"moderate\\",\\"tags\\":[\\"best-practice\\",\\"cat.semantics\\"],\\"description\\":\\"Ensure that the page, or at least one of its frames contains a level-one heading\\",\\"help\\":\\"Page must contain a level-one heading\\",\\"helpUrl\\":\\"https://dequeuniversity.com/rules/axe/4.1/page-has-heading-one?application=axeAPI\\",\\"nodes\\":[{\\"any\\":[],\\"all\\":[{\\"id\\":\\"page-has-heading-one\\",\\"data\\":null,\\"relatedNodes\\":[],\\"impact\\":\\"moderate\\",\\"message\\":\\"Page must have a level-one heading\\"}],\\"none\\":[],\\"impact\\":\\"moderate\\",\\"html\\":\\"<html lang=\\\\\\"en\\\\\\"><head></head><body>\\\\n\\\\n<div id=\\\\\\"dom-with-issues\\\\\\">\\\\n    <a href=\\\\\\"#\\\\\\"></a>\\\\n</div>\\\\n\\\\n\\\\n</body></html>\\",\\"target\\":[\\"html\\"],\\"failureSummary\\":\\"Fix all of the following:\\\\n  Page must have a level-one heading\\"}]}]"`;

exports[`a11y Results Formatter should format using specified options: 1 1`] = `
"\\"* (bypass) Page must have means to bypass repeated blocks: html\\"
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/bypass

\\"* (document-title) Documents must have <title> element to aid in navigation: html\\"
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/document-title

\\"* (link-name) Links must have discernible text: a\\"
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/link-name

\\"* (landmark-one-main) Document must have one main landmark: html\\"
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/landmark-one-main

\\"* (page-has-heading-one) Page must contain a level-one heading: html\\"
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/page-has-heading-one"
`;

exports[`a11y Results Formatter should format using specified options: 2 1`] = `
"* (bypass) Page must have means to bypass repeated blocks: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/bypass

* (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/document-title

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/link-name

* (landmark-one-main) Document must have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/landmark-one-main

* (page-has-heading-one) Page must contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/page-has-heading-one"
`;

exports[`a11y Results Formatter should format using specified options: 3 1`] = `
"* (bypass) Page must have means to bypass repeated blocks: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/bypass

* (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/document-title

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/link-name

* (landmark-one-main) Document must have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/landmark-one-main

* (page-has-heading-one) Page must contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/page-has-heading-one"
`;

exports[`a11y Results Formatter should format using specified options: 4 1`] = `
"* (bypass) Page must have means to bypass repeated blocks: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/bypass

* (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/document-title

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/link-name

* (landmark-one-main) Document must have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/landmark-one-main

* (page-has-heading-one) Page must contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/page-has-heading-one"
`;

exports[`a11y Results Formatter should not throw error for repeated violations with consolidation 1`] = `
"5 accessibility issues found
 * (bypass) Page must have means to bypass repeated blocks: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/bypass

* (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/document-title

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/link-name

* (landmark-one-main) Document must have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/landmark-one-main

* (page-has-heading-one) Page must contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/page-has-heading-one"
`;

exports[`a11y Results Formatter should not throw error for repeated violations with consolidation 2`] = `
"5 accessibility issues found
 * (bypass) Page must have means to bypass repeated blocks: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/bypass

* (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/document-title

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/link-name

* (landmark-one-main) Document must have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/landmark-one-main

* (page-has-heading-one) Page must contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/page-has-heading-one"
`;

exports[`a11y Results Formatter should throw error when violations are present 1`] = `
"5 accessibility issues found
 * (bypass) Page must have means to bypass repeated blocks: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/bypass

* (document-title) Documents must have <title> element to aid in navigation: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/document-title

* (link-name) Links must have discernible text: a
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/link-name

* (landmark-one-main) Document must have one main landmark: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/landmark-one-main

* (page-has-heading-one) Page must contain a level-one heading: html
	- Help URL: https://dequeuniversity.com/rules/axe/4.1/page-has-heading-one"
`;
